fix: Fix flag misalignment on cells with adjacent bombs.

--- a/src/style.css
+++ b/src/style.css
@@ -94,5 +94,5 @@ body {
 }
 
 .cell:not(.is-opened) p {
-  visibility: hidden;
+  display: none;
 }
